TAG: vocload-tr11560-1
DATE: 03/06/2014
STAFF: sc
CHANGES:
1) Install - added RV directories
2) loadOBO.py - add Feature Relationship vocab handling
3) RV.config, RV.rcd - added

TAG: vocload-tr11560-BP
DATE: 03/03/2014
STAFF: sc
CHANGES: Branch Point Tag for Feature Relationships project

TAG: vocload-5-1-7-1
DATE: 01/28/2014
STAFF: lec
CHANGES:
1) TR11584/media wiki change

TAG: vocload-5-1-6-2
DATE: 12/18/2013
STAFF: sc
CHANGES: Merge tr11468 changes to trunk

TAG:  vocload-tr11468-2
DATE: 11/20/2013
STAFF: sc
CHANGES:
1) added all output dirs to Install script

TAG: vocload-tr11468-1
DATE: 11/18/2013
STAFF: sc
CHANGES: removed: vocloadlib.py, loadDAG.py, html.py, dbTable.py, Log.py
    these have been factored out into lib_py_vocload

TAG: vocload-tr11468-BP
DATE: 11/18/2013
STAFF: sc
CHANGES: GXD_Anatomy project

TAG: vocload-5-1-6-1
TAG: vocload-5-1-5-2
DATE: 10/24/2013, 11/06/2013
STAFF: lec
CHANGES: branch point tag for TR11423/HDP (human disease portal)
1) TR11423/add loadOBO-DC*, OMIM.config, VOClib.config
   branch was merged to trunk

TAG: vocload-tr11423-1
DATE: 10/02/2013
STAFF: lec
CHANGES: branch point tag for TR11423/HDP (human disease portal)
1) TR11423/add loadOBO-DC*, OMIM.config, VOClib.config
add the disease-cluster (OBO-DC-file) to the OMIM configuration

TAG: vocload-tr11423-BP
DATE: 10/02/2013
STAFF: lec
CHANGES: branch point tag for TR11423/HDP (human disease portal)

TAG: vocload-5-1-5-3
TAG: vocload-5-1-5-1
DATE: 09/10/2013
STAFF: lec
CHANGES: TR11367
1) GO.config - updated input file path
2) GOindex.html

TAG: vocload-5-1-3-2
TAG: vocload-5-1-3-1
DATE: 04/30/2013
STAFF: sc
CHANGES: TR11367
1) GO.config - updated input file path
2) GOindex.html - update input file path

TAG: vocload-4-4-1-2
DATE: 05/23/2011
STAFF: lec
CHANGES: 
1) TR10551/OMIM.config; changed from 'lec' to 'mgiadmin'

TAG: vocload-4-4-1-1
DATE: 04/27/2011
STAFF: lec
CHANGES: 
1) TR10551/OMIM.py

TAG: vocload-4-4-0-2
TAG: vocload-4-4-0-1
DATE: 08/18/2010
STAFF: sc